--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="en_gb">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>Moiety</title>
-    <link rel="stylesheet" href="molecule.css">
+    <title>About Michiel Bijl</title>
+    <link rel="stylesheet" href="about.css">
   </head>
   <body>
-    <a href="http://michielbijl.nl"><span>Michiel Bijl</span></a>
+    <main>
+      <img src="Rosetta.jpg" alt="Portret of Michiel with a plush toy of the ESA Rosetta and Philea probe">
+      <h1>Michiel Bijl<br><span>Accessibility Engineer</span></h1>
+      <p>Michiel audits websites on accessibility for <a href="https://paciellogroup.com"><abbr title="The Paciello Group">TPG</abbr></a>.</p>
+      <p>They’re co-editor for W3’s <a href="https://w3c.github.io/aria-practices/"><abbr title="Authoring Practices Guide">APG</abbr></a><!-- and <a href="https://w3c.github.io/css-aam/">CSS Best Practices</a>--> and sometimes writes on <a href="http://michielbijl.nl">their  blog</a>.</p>
+      <p>You can usually find them on <a href="https://twitter.com/MichielBijl">Twitter</a>, <a href="https://gitter.im/w3c/a11ySlackers">Gitter</a>, and <a href="https://github.com/MichielBijl">GitHub</a>.</p>
+      <p>Moiety is pronounced moi-a-ti (mɔɪəti).</p>
+    </main>
   </body>
 </html>
