Add new articles

--- a/thinks/index.html
+++ b/thinks/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <base href="/thinks/">
-    <title>Thnks - Michiel Bijl</title>
+    <title>Thinks - Michiel Bijl</title>
     <link rel="stylesheet" href="thinks.css">
   </head>
   <body>
@@ -12,6 +12,7 @@
       <h1>Thinks</h1>
       <p>Some sporadic thoughts that I put into HTML files.</p>
       <ul>
+        <li><a href="even-more-interesting-accessibility-links.html">Even more interesting accessibility links</a>, <time>2017-12-18</time></li>
         <li><a href="more-interesting-accessibility-links.html">More interesting accessibility links</a>, <time>2017-05-08</time></li>
         <li><a href="cascading-semantic-stylehooks.html">Cascading Semantic Stylehooks</a>, <time>2017-04-26</time></li>
         <li><a href="you-dont-want-to-hire-me.html">You don’t want to hire me</a>, <time>2016-01-11</time></li>
